--- a/web/src/template.html
+++ b/web/src/template.html
@@ -43,7 +43,7 @@
     <meta name="twitter:image:alt" content="A picture of a paved forest road">
 
     <!-- umami analytics -->
-    <script async defer data-website-id="388277bd-a142-484e-843e-69d334c913a9" src="http://localhost:3000/umami.js"></script>
+    <!-- <script async defer data-website-id="388277bd-a142-484e-843e-69d334c913a9" src="http://localhost:3000/umami.js"></script> -->
 
 	<!-- Sapper generates a <style> tag containing critical CSS
 	     for the current page. CSS for the rest of the app is
