--- a/web/src/template.html
+++ b/web/src/template.html
@@ -63,6 +63,6 @@
 	     and anything else it needs to hydrate the app and
 	     initialise the router -->
 	%sapper.scripts%
-	<script type="text/javascript" src="https://gumroad.com/js/gumroad.js"></script>
+	<script rel="preload" type="text/javascript" src="https://gumroad.com/js/gumroad.js"></script>
 </body>
 </html>
