--- a/web/src/template.html
+++ b/web/src/template.html
@@ -11,23 +11,24 @@
 	<link rel='preload manifest' href='manifest.json'>
 	<link rel='preload icon' type='image/png' href='favicon.png'>
 
+	<link rel="preload" type="font/woff2" as="font" href="/fonts/norwester-webfont.woff2" crossorigin="anonymous" />
 	<link rel="preload apple-touch-icon" sizes="57x57" href="/favicons/apple-icon-57x57.png">
-    <link rel="preload apple-touch-icon" sizes="60x60" href="/favicons/apple-icon-60x60.png">
-    <link rel="preload apple-touch-icon" sizes="72x72" href="/favicons/apple-icon-72x72.png">
-    <link rel="preload apple-touch-icon" sizes="76x76" href="/favicons/apple-icon-76x76.png">
-    <link rel="preload apple-touch-icon" sizes="114x114" href="/favicons/apple-icon-114x114.png">
-    <link rel="preload apple-touch-icon" sizes="120x120" href="/favicons/apple-icon-120x120.png">
-    <link rel="preload apple-touch-icon" sizes="144x144" href="/favicons/apple-icon-144x144.png">
-    <link rel="preload apple-touch-icon" sizes="152x152" href="/favicons/apple-icon-152x152.png">
-    <link rel="preload apple-touch-icon" sizes="180x180" href="/favicons/apple-icon-180x180.png">
-    <link rel="preload icon" type="image/png" sizes="192x192" href="/favicons/android-icon-192x192.png">
-    <link rel="preload icon" type="image/png" sizes="32x32" href="/favicons/favicon-32x32.png">
-    <link rel="preload icon" type="image/png" sizes="96x96" href="/favicons/favicon-96x96.png">
-    <link rel="preload icon" type="image/png" sizes="16x16" href="/favicons/favicon-16x16.png">
-    <link rel="preload manifest" href="/manifest.json">
-    <meta name="msapplication-TileColor" content="#ffffff">
-    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
-    <meta name="theme-color" content="#ffffff">
+	<link rel="preload apple-touch-icon" sizes="60x60" href="/favicons/apple-icon-60x60.png">
+	<link rel="preload apple-touch-icon" sizes="72x72" href="/favicons/apple-icon-72x72.png">
+	<link rel="preload apple-touch-icon" sizes="76x76" href="/favicons/apple-icon-76x76.png">
+	<link rel="preload apple-touch-icon" sizes="114x114" href="/favicons/apple-icon-114x114.png">
+	<link rel="preload apple-touch-icon" sizes="120x120" href="/favicons/apple-icon-120x120.png">
+	<link rel="preload apple-touch-icon" sizes="144x144" href="/favicons/apple-icon-144x144.png">
+	<link rel="preload apple-touch-icon" sizes="152x152" href="/favicons/apple-icon-152x152.png">
+	<link rel="preload apple-touch-icon" sizes="180x180" href="/favicons/apple-icon-180x180.png">
+	<link rel="preload icon" type="image/png" sizes="192x192" href="/favicons/android-icon-192x192.png">
+	<link rel="preload icon" type="image/png" sizes="32x32" href="/favicons/favicon-32x32.png">
+	<link rel="preload icon" type="image/png" sizes="96x96" href="/favicons/favicon-96x96.png">
+	<link rel="preload icon" type="image/png" sizes="16x16" href="/favicons/favicon-16x16.png">
+	<link rel="preload manifest" href="/manifest.json">
+	<meta name="msapplication-TileColor" content="#ffffff">
+	<meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+	<meta name="theme-color" content="#ffffff">
 
     <!-- umami analytics -->
     <!-- <script async defer data-website-id="388277bd-a142-484e-843e-69d334c913a9" src="http://localhost:3000/umami.js"></script> -->
