--- a/web/src/template.html
+++ b/web/src/template.html
@@ -30,7 +30,7 @@
 	<meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
 	<meta name="theme-color" content="#ffffff">
 
-	<script async defer data-website-id="184dd099-3a0f-4429-a049-5b16f731288a" src="https://threesam-umami.herokuapp.com/umami.js"></script>
+	<script async defer data-website-id="184dd099-3a0f-4429-a049-5b16f731288a" src="https://analytics.threesam.com/umami.js"></script>
 
     <!-- umami analytics -->
     <!-- <script async defer data-website-id="388277bd-a142-484e-843e-69d334c913a9" src="http://localhost:3000/umami.js"></script> -->
